--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
     
     <!-- Custom Styles -->
-  <script type="module" crossorigin src="felix-ai.js"></script>
-  <link rel="stylesheet" crossorigin href="felix-ai.css">
+  <!-- To wygeneruje Vite w pliku dist/index.html -->
+<script type="module" crossorigin src="/FelixAi/index.js"></script>
+<link rel="stylesheet" crossorigin href="/FelixAi/index.css">
 </head>
 <body>
     <div id="app-container">
